# World-Biotics-Transition-Coalition

./: README.md
Source/: Main.bmx
config/: tempe_phoenix_gates.csv  tempe_phoenix_nodes.csv
core/: OrchestratorKernel.cpp
data/: hydro_time_series.csv
docs/: About_teslaswarm is a low-cost energy-solution tha (1).md  Advancing the Teslaswarm Concept_ A Comprehensive.md  GitHub-hosted large-structure repositories contain.md  K_E_R_Grammar.md  teslaswarm capabilities, for on-machine tesla-coil.md  teslaswarm is a cybernetic-nanoswarm design to saf.md  water-system-trajectory-calculations-and-manning-equations.md
logistics/: water_emergency_rhythm.rs  water_emergency_rhythm_model.json
models/hydro/: SmartCityHydroControl.bmx  TempePhoenix_AquaGrid.bmx
particles/: real_time_ewaste_sorting_system.cpp
qpudatashards/: EcoStrategyProfiles.csv  EcoWasteProcessor.bmx  advanced_ewaste_solutions_v2.csv  tesla-buildroot-hardware-mapping.csv
virta-git/: Cargo.toml  virta-git.config.json
virta-git/config/: remote_providers.toml
virta-git/config/policies/: authorship_policy.toml  non_fiction_policy.toml  progress_policy.toml
virta-git/schemas/: authorship_record.schema.json  virta_git_manifest.schema.json
virta-git/src/: lib.rs  main.rs
virta-git/src/adapters/: git_cli.rs  mod.rs  virta_sys_bridge.rs  vsc_artemis_bridge.rs
virta-git/src/core/: authorship_registry.rs  mod.rs  policy_engine.rs  repo_registry.rs
virta-git/src/services/: compliance_service.rs  ingest_service.rs  mod.rs  sync_service.rs
water/: h2o_token_az.rs  h2o_token_policy_az.json
(+17 files in other folders)
