[package]
name = "virta-git"
version = "0.1.0"
edition = "2021"
description = "Virta-Git: non-fiction, policy-enforced Git source-of-truth for Virta-Sys and VSC-ARTEMIS."
license = "MIT"
authors = ["Dr. Jacob Scott Farmer <noreply@example.com>"]
repository = "https://github.com/Doctor0Evil/Virta-Git.git"

[package.metadata.virta]
system = "Virta-Git"
virta_sys_anchor = "virta-sys"
vsc_artemis_anchor = "VSC-ARTEMIS-5E8A2B7C-AC41-4F2B-BD6E-9C3E7A1F4D2E"
config_manifest = "virta-git.config.json"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
git2 = "0.19"
anyhow = "1.0"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
default = ["runtime"]
runtime = []
cli = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
